# GoalBet

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  project_plan.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  frontend-deploy.yml  tests.yaml
api/: __init__.py  alembic.ini
api/app/: main.py
api/app/api/: __init__.py  routers_auth.py  routers_bets.py  routers_bounties.py  routers_goals.py  routers_health.py  routers_stream.py  routers_users.py  routers_wallet.py
api/app/core/: data_store.py  db.py  events.py  logger.py  security.py  settings.py
api/app/models/: __init__.py  bet.py  bounty_missions.py  db_models.py  enums.py  goal.py  user.py
api/app/scripts/: __init__.py  bootstrap_db.py
api/app/service/: __init__.py  bet_service.py  bounty_service.py  email.py  goal_service.py  settlement.py  tokens_helper.py  user_service.py
api/migrations/: __init__.py  env.py
api/migrations/versions/: 68409d2618e0_init_tables.py
api/tests/: __init__.py  conftest.py  test_auth_and_wallet.py  test_bets.py  test_bounty.py  test_db_connection.py  test_goals.py  test_health.py  test_settlement.py  test_stream.py  test_users.py
db/rollback/0.0.1/: user_del_col.sql
db/upgrade/0.0.1/: user_add_col.sql
tests/: test_auth_and_wallet.py  test_bets.py  test_bounty.py  test_db_connection.py  test_goals.py  test_settlement.py  test_users.py
tools/: narrator.py
web/: .env  package-lock.json  package.json
web/src/: App.tsx
web/src/api/: authService.ts  axiosClient.ts  betsService.ts  goalsService.ts  (+2 more)
(+19 files in other folders)
