[project]
name = "goalbet"
version = "0.1.0"
description = "GoalBet — a gamified goal-tracking and social betting platform"
requires-python = ">=3.9"
authors = [{ name = "Aidan", email = "xiaofang1058@gmail.com" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "pydantic",
    "alembic",
    "pytest",
    "httpx",
]

[tool.black]
line-length = 120
target-version = ['py39']
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
skip = ["venv", "__pycache__"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "venv"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
warn_unused_ignores = true
ignore_missing_imports = true
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
show_error_codes = true
pretty = true
exclude = '(venv|tests|migrations|__pycache__)'

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-v -s"
testpaths = ["api/tests"]
filterwarnings = ["ignore::DeprecationWarning"]
